--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && node dist/index.js",
     "build": "tsc && npm run copy-docs",
     "copy-docs": "cp -r src/docs dist/docs",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/index.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec tsx src/index.ts",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint --fix",
     "prettier": "prettier --write --ignore-unknown .",
@@ -43,7 +43,7 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prisma": "^5.20.0",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
